--- a/index2.html
+++ b/index2.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+     <h3>My Frist Website</h3>
+     <p>I am web devoloper. i know codding. i know css.
+        I am web devoloper. i know codding. i know css.
+        I am web devoloper. i know codding. i know css.
+        I am web devoloper. i know codding. i know css.
+        I am web devoloper. i know codding. i know css.
+        I am web devoloper. i know codding. i know css.
+     </p>
+
+    </div>
 </body>
 </html>
