--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-     <h3>My Frist Website</h3>
+     <h3>My Frist Blog</h3>
      <p>I am web devoloper. i know codding. i know css.
         I am web devoloper. i know codding. i know css.
         I am web devoloper. i know codding. i know css.
@@ -18,5 +18,28 @@
      </p>
 
     </div>
+
+    <div>
+        <h3>My Secens Blog</h3>
+        <p>I am web devoloper. i know codding. i know css.
+           I am web devoloper. i know codding. i know css.
+           I am web devoloper. i know codding. i know css.
+           I am web devoloper. i know codding. i know css.
+           I am web devoloper. i know codding. i know css.
+           I am web devoloper. i know codding. i know css.
+        </p>
+   
+       </div>
+       <div>
+        <h3>My Third Blog</h3>
+        <p>I am web devoloper. i know codding. i know css.
+           I am web devoloper. i know codding. i know css.
+           I am web devoloper. i know codding. i know css.
+           I am web devoloper. i know codding. i know css.
+           I am web devoloper. i know codding. i know css.
+           I am web devoloper. i know codding. i know css.
+        </p>
+   
+       </div>
 </body>
 </html>
